Create business layout and test displawing clients

--- a/DAL/DAL.vbproj
+++ b/DAL/DAL.vbproj
@@ -102,5 +102,11 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entity\Entity.vbproj">
+      <Project>{946f9c50-523f-4245-a76b-cb62121a8153}</Project>
+      <Name>Entity</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
