create the view productList and detailSale to client

--- a/Examen/Examen.vbproj
+++ b/Examen/Examen.vbproj
@@ -93,6 +93,12 @@
     <Compile Include="Cliente\frmListaProductos.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Cliente\frmVentaDetalles.Designer.vb">
+      <DependentUpon>frmVentaDetalles.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Cliente\frmVentaDetalles.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmAdmin.Designer.vb">
       <DependentUpon>frmAdmin.vb</DependentUpon>
     </Compile>
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Cliente\frmListaProductos.resx">
       <DependentUpon>frmListaProductos.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Cliente\frmVentaDetalles.resx">
+      <DependentUpon>frmVentaDetalles.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAdmin.resx">
       <DependentUpon>frmAdmin.vb</DependentUpon>
