--- a/BLL/BLL.vbproj
+++ b/BLL/BLL.vbproj
@@ -81,6 +81,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Producto_BLL.vb" />
+    <Compile Include="Venta_BLL.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
