--- a/DAL/DAL.vbproj
+++ b/DAL/DAL.vbproj
@@ -83,6 +83,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Producto_DAL.vb" />
+    <Compile Include="Venta_DAL.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
