create entity, bll, dal from itemsale to done crud operations

--- a/BLL/BLL.vbproj
+++ b/BLL/BLL.vbproj
@@ -81,6 +81,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Producto_BLL.vb" />
+    <Compile Include="VentasItem_BLL.vb" />
     <Compile Include="Venta_BLL.vb" />
   </ItemGroup>
   <ItemGroup>
